--- a/app/views/contact_forms/new.html.erb
+++ b/app/views/contact_forms/new.html.erb
@@ -1,5 +1,5 @@
 <div id="main-content">
-  <div class="widget widget-light" id="w-yeni-kayit">
+  <div class="widget widget-light" id="w-iletisim">
     <div class="w-inner">
       <div class="w-title">İletişim</div>
         <%= render 'form' %>
