--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,7 +40,7 @@
       <div class="profile profile-individual rc-right">
         <div class="fc-inner">
           <h3>Gönüllü olmak istiyorum:</h3>
-          <p>Benvarım.com’a üye olun, bağış sayfanızı yaratın ve desteklediğiniz vakıf ve dernek için anında bağış toplamaya başlayın.</p>
+          <p>Benvarım’a üye olun, bağış sayfanızı yaratın, desteklediğiniz vakıf ve dernek için anında bağış toplamaya başlayın.</p>
         </div>
       </div>
 
@@ -97,14 +97,3 @@
 </div><!-- end of #main-content -->
 
 <%= render 'layouts/sidebar'%>
-
-<%
-=begin
-%>
-
-<%
-=end
-%>
-
-
-
