--- a/app/views/contact_forms/_form.html.erb
+++ b/app/views/contact_forms/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@contact_form) do |f| %>
   <% if @contact_form.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="msg msg-error">
       <h2>Lütfen bu <%=@contact_form.errors.count%> hatayı düzeltiniz</h2>
 
       <ul>
@@ -17,10 +17,12 @@
       <%= f.label :name %>
       <%= f.text_field :name %>
     </div>
+    <!--
     <div class="field">
       <%= f.label :city %>
       <%= f.text_field :city %>
     </div>
+    -->
     <div class="field">
       <%= f.label :phone %>
       <%= f.text_field :phone %>
@@ -29,15 +31,16 @@
       <%= f.label :email %>
       <%= f.text_field :email %>
     </div>
+    <!--
     <div class="field">
       <%= f.label :organization, :style=> "line-height:20px" %>
       <%= f.text_field :organization %>
     </div>
-    <br/>
     <div class="field">
       <%= f.label :organization_role %>
       <%= f.text_field :organization_role %>
     </div>
+    -->
     <div class="field">
       <%= f.label :other %>
       <%= f.text_area :other %>
