--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -1,9 +1,8 @@
 <%= form_for @organization , :html => { :multipart => true } do |f| %>
 
         <% if @organization.errors.any? %>
-          <div id="error_explanation">
-            <h2>Kurum kaydedilemedi!<br/>
-                Lütfen aşagıdaki hataları düzeltiniz!</h2>
+          <div id="error_explanation" class="msg msg-error">
+            <h2>Kurum kaydedilemedi! Lütfen aşagıdaki hataları düzeltiniz!</h2>
             <ul>
             <% @organization.errors.full_messages.each do |msg| %>
               <li><%= msg %></li>
