--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -3,7 +3,7 @@
     <div class="w-inner">
       <div class="w-title">Bağış Yap</div>
       <% if @tmp_payment.errors.any? %>
-        <div id="error_explanation">
+        <div class="msg msg-error" id="error_explanation">
           <h2>Lütfen bu <%=@tmp_payment.errors.count%> hatayı düzeltiniz</h2>
 
           <ul>
