minor text update.

--- a/app/views/layouts/_sidebar_kurum.erb
+++ b/app/views/layouts/_sidebar_kurum.erb
@@ -1,8 +1,9 @@
 <div id="sidebar">
   <div id="w-yenikayit" class="widget widget-blue">
     <div class="w-inner">
-      <div class="w-title">Ben de gönüllü olmak istiyorum!</div>
-      <p>BenVarım üyeleri istedikleri vakıf ve dernek için bağış kampanyası düzenleyebilir ve tamamen güvenli olan sistemimiz aracılığıyla para toplamaya başlayabilirler.</p>
+      <div class="w-title">Ben de bağış sayfası yaratmak istiyorum.</div>
+      <p>Desteklediğiniz kurum adına bağış sayfası yaratıp arkadaşlarınızla paylaşabilirsiniz.</p>
+
 
       <%=link_to "Bağış Sayfası Yarat", :new_page, :class => "button green large"%>
     </div>
