--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -91,7 +91,7 @@
                   <div class="row clearfix">
                     <div class="bagis-miktari"><%=payment.amount_str%><span>TL</span></div>
                     <blockquote><span>“</span> <%=payment.note%></blockquote>
-                    <div class="bagisci"><%=payment.name%> - <%=payment.created_at %>  </div>
+                    <div class="bagisci"><%=payment.name%> - <%=payment.created_at.in_time_zone("Istanbul").to_formatted_s(:simple) %>  </div>
                   </div><!-- end of .row -->
                 <% end %>
 
