share fixes for the releae

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -34,12 +34,10 @@
 
           <div class="share-options">
             <ul>
-              <!-- <li><fb:like layout="button_count" show_faces="false" width="150"></fb:like></li> -->
-              <li><a  target="_blank" name="fb_share" type="button_count" href="javascript:void(alert('Demo aşamasında sayfaları paylaşamazsınız, teşekkürler'))">Facebook'ta Paylaş</a></li>
-              <!-- <li><a  target="_blank" name="fb_share" type="button_count" href="http://www.facebook.com/sharer.php">Facebook'ta Paylaş</a></li> -->
+              <li><fb:like layout="button_count" show_faces="false" type="button_count"></fb:like></li>
+              <!-- <li><a  target="_blank" name="fb_share" type="button_count">Facebook'ta Paylaş</a></li> -->
               <li><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-text="<%= @page.title %>" >Tweet</a></li>
-              <!-- <li><a style="background: url(http://friendfeed.com/static/images/icons/internal.png) 0px 0px no-repeat; padding-left: 20px; margin-left: 30px;" href="http://friendfeed.com/?url=<%= request.url %>&amp;title=<%= @page.title %>" target="_blank">FriendFeed'de Paylaş</a></li> -->
-	      <li><a class="addthis_button_preferred_1"></a></li>
+        <!-- <li><a class="addthis_button_preferred_1"></a></li> -->
             </ul>
 
 
