--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -34,8 +34,8 @@
 
           <div class="share-options">
             <ul>
-              <li><fb:like layout="button_count" show_faces="false" type="button_count"></fb:like></li>
-              <!-- <li><a  target="_blank" name="fb_share" type="button_count">Facebook'ta Paylaş</a></li> -->
+              <!-- <li><fb:like layout="button_count" show_faces="false" type="button_count"></fb:like></li> -->
+              <li><a  target="_blank" name="fb_share" type="button_count">Facebook'ta Paylaş</a></li>
               <li><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-text="<%= @page.title %>" >Tweet</a></li>
         <!-- <li><a class="addthis_button_preferred_1"></a></li> -->
             </ul>
