addthis uncommented added related metatags

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,6 +25,10 @@
   <meta property="og:description" content="<%=fb_og_description%>"/>
   <meta property="og:image" content="<%=fb_og_image%>"/>
 
+  <meta property="title" content="<%=tags_title%>"/>
+  <meta property="description" content="<%=tags_description%>"/>
+  <meta property="keywords" content="<%=tags_keywords%>"/>
+
   <!--  Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
