--- a/app/views/user_mailer/signup.text.erb
+++ b/app/views/user_mailer/signup.text.erb
@@ -1,10 +1,26 @@
 Merhaba <%=@user.name%>,
-Benvarım.com'a katıldığınız için teşekkürler.
-Benvarım.com sayesinde sosyal ağınızın gücünü kullanarak
-dilediğiniz sosyal toplum kuruluşunu destekleyebilirsiniz.
-Teşekkürler.
-Benvarım.com Ekibi
-    Benvarım Nedir? <%= nedir_path(:only_path => false) %>
-    Benvarım Nasıl Çalışır? <%= nasil_calisir_path(:only_path => false) %>
-    Profilim <%= user_path(@user, :only_path => false) %>
-    Yeni Sayfa Yarat <%= new_page_path(:only_path => false) %>
+
+Benvarim.com'a hoşgeldin!
+
+"Ben Varım!" diyerek Türkiye'nin sosyal gelişimine katkıda bulunduğun için teşekkür ederiz.
+
+-Özel bir gününü kutlamak,
+-Sportif veya sanatsal bir faaliyetini duyurmak,
+-Veya sosyal aktivizmine güç katmak için
+Hemen bir gönüllü sayfası oluşturup, çevrenle paylaşarak destekçisi olduğun vakıf veya derneği güçlendirebilirsin.
+<%= new_page_path(:only_path => false) %>
+
+Yöneticisi, çalışanı veya gönüllüsü olduğun STK'yı, benvarim.com'a ekleyebilirsin.
+<%= new_organization_path(:only_path => false) %>
+
+Bir hayırsever olarak, gönüllüler aracılığıyla vakıf ve derneklere bağışta bulunabilirsin.
+<%= all_pages_path(:only_path => false) %>
+
+Lütfen sana nasıl yardımcı olabileceğimizi bize ilet. Elimizden geleni yapmaya hazırız.
+
+Görüşmek üzere,
+Benvarim.com Ekibi
+
+Twitter:  http://twitter.com/#!/Ben_Varim
+Facebook: http://www.facebook.com/BenVarim.Platformu
+Email: iletisim@benvarim.com
