--- a/app/views/user_mailer/signup.html.erb
+++ b/app/views/user_mailer/signup.html.erb
@@ -19,16 +19,16 @@ Merhaba <%=@user.name%>,<br/>
 -Veya sosyal aktivizmine güç katmak için<br/>
 Hemen bir <a href="<%= new_page_path(:only_path => false) %>">gönüllü sayfası</a> oluşturup, çevrenle paylaşarak destekçisi olduğun vakıf veya derneği güçlendirebilirsin.<br/>
 <br/>
-Yöneticisi, çalışanı veya gönüllüsü olduğun STK'yı, Benvarım.com'a <a href="<%= new_organization_path(:only_path => false) %>">ekleyebilirsin</a>.<br/>
+Yöneticisi, çalışanı veya gönüllüsü olduğun STK'yı, Benvarim.com'a <a href="<%= new_organization_path(:only_path => false) %>">ekleyebilirsin</a>.<br/>
 <br/>
 Bir hayırsever olarak, <a href="<%= all_pages_path(:only_path => false) %>">gönüllüler</a> aracılığıyla vakıf ve derneklere bağışta bulunabilirsin.<br/>
 <br/>
 Lütfen sana nasıl yardımcı olabileceğimizi bize ilet. Elimizden geleni yapmaya hazırız.<br/>
 <br/>
 Görüşmek üzere,<br/>
-Benvarım.com Ekibi<br/>
+Benvarim.com Ekibi<br/>
 <ul>
-  <li>Twitter<a href="http://twitter.com/#!/Ben_Varim">@BenVarim</a></li>
+  <li>Twitter: <a href="http://twitter.com/#!/Ben_Varim">@BenVarim</a></li>
   <li>Facebook: <a href="http://www.facebook.com/BenVarim.Platformu">Ben Varım Facebok</a></li>
   <li>Email: <a href="mailto:iletisim@benvarim.com">iletisim@benvarim.com</a></li>
 </ul>
