--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,10 +61,10 @@
 <div class="widget widget-light clearfix" id="featured-charities">
     <div class="w-inner">
       <div class="w-title">Bağış Yapabileceğiniz Kurumlar</div>
-      <a href="http://benvarim.com/kurum/nesin-vakfi/bagis" id="fc-nesin" title="Nesin Vakfı">Nesin Vakfı</a>
-      <a href="http://benvarim.com/kurum/ormana-kalkinma-ve-yardimlasma-vakfi/bagis" id="fc-ormana" title="Ormana Vakfı">Ormana Vakfı</a>
-      <a href="http://benvarim.com/kurum/cagdas-yasami-destekleme-dernegi/bagis" id="fc-cydd" class="fc-default" title="Çağdaş Yaşamı Destekleme Derneği">Çağdaş Yaşamı Destekleme Derneği</a>
-      <a href="http://benvarim.com/kurum/turkish-educational-foundation-abd/bagis" id="fc-tef" class="fc-default" title="Turkish Educational Foundation">Turkish Educational Foundation</a>
+      <a href="http://benvarim.com/kurum/nesin-vakfi" id="fc-nesin" title="Nesin Vakfı">Nesin Vakfı</a>
+      <a href="http://benvarim.com/kurum/ormana-kalkinma-ve-yardimlasma-vakfi" id="fc-ormana" title="Ormana Vakfı">Ormana Vakfı</a>
+      <a href="http://benvarim.com/kurum/cagdas-yasami-destekleme-dernegi" id="fc-cydd" class="fc-default" title="Çağdaş Yaşamı Destekleme Derneği">Çağdaş Yaşamı Destekleme Derneği</a>
+      <a href="http://benvarim.com/kurum/turkish-educational-foundation-abd" id="fc-tef" class="fc-default" title="Turkish Educational Foundation">Turkish Educational Foundation</a>
       <a href="/kurum/yeni" id="fc-item" class="fc-default" title="Yeni Vakıf ve Dernek Kaydı">Yeni Vakıf ve Dernek Kaydı</a>
       <!--
         <a href="#" id="fc-tema" class="opaque" title="TEMA">TEMA</a>
