final signup email

--- a/app/views/user_mailer/signup.html.erb
+++ b/app/views/user_mailer/signup.html.erb
@@ -10,27 +10,30 @@
 
 Merhaba <%=@user.name%>,<br/>
 
-<a href="<%=root_path(:only_path => false)%>">Benvarım.com</a>'a hoşgeldin!<br/>
 <br/>
-"Ben Varım!" diyerek Türkiye'nin sosyal gelişimine katkıda bulunduğun için teşekkür ederiz.<br/>
+Türkiye'nin ilk internet bağış platformu <a href="<%=root_path(:only_path => false)%>">Benvarim.com</a>'a hoşgeldin!<br/>
 <br/>
--Özel bir gününü kutlamak,<br/>
--Sportif veya sanatsal bir faaliyetini duyurmak,<br/>
--Veya sosyal aktivizmine güç katmak için<br/>
-Hemen bir <a href="<%= new_page_path(:only_path => false) %>">gönüllü sayfası</a> oluşturup, çevrenle paylaşarak destekçisi olduğun vakıf veya derneği güçlendirebilirsin.<br/>
+Benvarim.com ile <a href="<%= new_page_path(:only_path => false) %>">gönüllü sayfası oluşturup</a>,
+<ul>
+  <li>Özel bir gününü sevdiklerinle paylaşabilir, </li>
+  <li>Sportif veya sanatsal bir faaliyetini çevrene duyurabilir,</li>
+  <li>Veya sosyal aktivizmin ile destekçisi olduğun vakıf veya derneği güçlendirebilirsin.</li>
+</ul>
 <br/>
-Yöneticisi, çalışanı veya gönüllüsü olduğun STK'yı, Benvarim.com'a <a href="<%= new_organization_path(:only_path => false) %>">ekleyebilirsin</a>.<br/>
+Yöneticisi veya çalışanı olduğun STK'yı <a href="<%= new_organization_path(:only_path => false) %>">sistemimize kayıt edebilirsin.</a><br/>
 <br/>
 Bir hayırsever olarak, <a href="<%= all_pages_path(:only_path => false) %>">gönüllüler</a> aracılığıyla vakıf ve derneklere bağışta bulunabilirsin.<br/>
 <br/>
-Lütfen sana nasıl yardımcı olabileceğimizi bize ilet. Elimizden geleni yapmaya hazırız.<br/>
+Fikir ve önerilerine çok önem veriyoruz. Seninle iletişimde olmak bizi motive ederken, projemizi de güçlendirecek. Lütfen bizi takip et ve dostlarına anlat.<br/>
 <br/>
 Görüşmek üzere,<br/>
-Benvarim.com Ekibi<br/>
+Proje Direktörü<br/>
+Levent Baş<br/>
+
 <ul>
   <li>Twitter: <a href="http://twitter.com/#!/Ben_Varim">@BenVarim</a></li>
   <li>Facebook: <a href="http://www.facebook.com/BenVarim.Platformu">Ben Varım Facebok</a></li>
   <li>Email: <a href="mailto:iletisim@benvarim.com">iletisim@benvarim.com</a></li>
 </ul>
-  </body>
+</body>
 </html>
