--- a/app/views/user_mailer/signup.text.erb
+++ b/app/views/user_mailer/signup.text.erb
@@ -1,25 +1,23 @@
 Merhaba <%=@user.name%>,
 
-Benvarim.com'a hoşgeldin!
+Türkiye'nin ilk internet bağış platformu Benvarim.com'a hoşgeldin!.
 
-"Ben Varım!" diyerek Türkiye'nin sosyal gelişimine katkıda bulunduğun için teşekkür ederiz.
+Benvarim.com ile gönüllü sayfası oluşturup,(<%= new_page_path(:only_path => false) %>),
+  -Özel bir gününü sevdiklerinle paylaşabilir,
+  -Sportif veya sanatsal bir faaliyetini çevrene duyurabilir,
+  -Veya sosyal aktivizmin ile destekçisi olduğun vakıf veya derneği güçlendirebilirsin.
 
--Özel bir gününü kutlamak,
--Sportif veya sanatsal bir faaliyetini duyurmak,
--Veya sosyal aktivizmine güç katmak için
-Hemen bir gönüllü sayfası oluşturup, çevrenle paylaşarak destekçisi olduğun vakıf veya derneği güçlendirebilirsin.
-<%= new_page_path(:only_path => false) %>
-
-Yöneticisi, çalışanı veya gönüllüsü olduğun STK'yı, benvarim.com'a ekleyebilirsin.
+Yöneticisi veya çalışanı olduğun STK'yı sistemimize kayıt edebilirsin.
 <%= new_organization_path(:only_path => false) %>
 
 Bir hayırsever olarak, gönüllüler aracılığıyla vakıf ve derneklere bağışta bulunabilirsin.
 <%= all_pages_path(:only_path => false) %>
 
-Lütfen sana nasıl yardımcı olabileceğimizi bize ilet. Elimizden geleni yapmaya hazırız.
+Fikir ve önerilerine çok önem veriyoruz. Seninle iletişimde olmak bizi motive ederken, projemizi de güçlendirecek. Lütfen bizi takip et ve dostlarına anlat.
 
 Görüşmek üzere,
-Benvarim.com Ekibi
+Proje Direktörü
+Levent Baş
 
 Twitter: http://twitter.com/#!/Ben_Varim
 Facebook: http://www.facebook.com/BenVarim.Platformu
