adds condense plugin, sharethis email functionality and moves donate button right below the message.

--- a/app/views/pages/_list_pages.html.erb
+++ b/app/views/pages/_list_pages.html.erb
@@ -11,7 +11,7 @@
               <h3><%= link_to page.title, page %></h3>
               <p><%= link_to page.organization.name, page.organization %> &raquo; <%= link_to page.project.name, page.project %>  &raquo; <%= link_to page.user.name, page.user %></p>
 
-              <div class="truncate-short">
+              <div class="condense-200">
                 <%= page.description %>
               </div>
 
