--- a/app/views/pages/_list_pages_condensed.erb
+++ b/app/views/pages/_list_pages_condensed.erb
@@ -11,7 +11,7 @@
         <div class="row-details">
           <h3><%= page.title %></h3>
           <div class="bagis-miktari"><%= page.collected_str%> <span>TL</span></div>
-          <blockquote><span>“ </span> <%= page.description%></blockquote>
+          <blockquote class=""><span class="quotation">“ </span> <%= page.description %></blockquote>
         </div>
       </div><!-- end of .row -->
     <% end %>
