beni fb;admin yaptim

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,6 +25,7 @@
   <meta property="og:title" content="<%=fb_og_title%>" />
   <meta property="og:description" content="<%=fb_og_description%>"/>
   <meta property="og:image" content="<%=fb_og_image%>"/>
+  <meta property="fb:admins" content="574728226"/>
 
   <meta property="title" content="<%=tags_title%>"/>
   <meta property="description" content="<%=tags_description%>"/>
