--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,9 @@
   <meta property="og:type"  content="activity"/>
   <meta property="og:title" content="<%=fb_og_title%>" />
   <meta property="og:description" content="<%=fb_og_description%>"/>
-  <meta property="og:image" content="<%=fb_og_image%>"/>
+  <%fb_og_images.each do |url|%>
+    <meta property="og:image" content="<%=url%>"/>
+  <%end%>
   <meta property="fb:admins" content="574728226"/>
 
   <meta property="title" content="<%=tags_title%>"/>
