--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
        Remove this if you use the .htaccess -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>Benvarim</title>
+  <title><%=tags_title%></title>
   <meta property="og:site_name" content="Benvarim.com"/>
   <meta property="og:url" content="<%=url_for :only_path => false%>"/>
   <meta property="og:type"  content="activity"/>
