--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -33,6 +33,9 @@
 
 <!-- Grab Google CDN's jQuery. fall back to local if necessary -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.js"></script>
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js">
+  {lang: 'tr'}
+</script>
 <script>!window.jQuery && document.write(unescape('%3Cscript src="javascripts/libs/jquery-1.4.2.js"%3E%3C/script%3E'))</script>
 
 <%= javascript_include_tag "plugins" %>
