replace email w/ fb send

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -21,13 +21,8 @@
 
 <!-- Share part -->
 <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
-<script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share"></script>
-
-<!-- Mail part -->
-<script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=xa-4da2416a50c4a19f"></script>
-
-
+<div id="fb-root"></div>
+<script src="http://connect.facebook.net/tr_TR/all.js#xfbml=1"></script>
 
 <!-- Javascript at the bottom for fast page loading -->
 
