--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -36,8 +36,7 @@
             <ul>
               <!-- <li><fb:like layout="button_count" show_faces="false" type="button_count"></fb:like></li> -->
               <li style="width:60px"><g:plusone size="medium"></g:plusone></li>
-              <li><span  class='st_email_hcount' displayText='Email'></span></li>
-              <li><a  target="_blank" name="fb_share" type="button_count">Facebook'ta Paylaş</a></li>
+              <li><fb:like send="true" layout="button_count" width="250" show_faces="false" font=""></fb:like></li>
               <li><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-text="<%= @page.title %>" >Tweet</a></li>
             </ul>
 
