--- a/app/views/layouts/_sidebar.erb
+++ b/app/views/layouts/_sidebar.erb
@@ -50,7 +50,7 @@
   <div id="w-facebook" class="widget widget-dark">
     <div class="w-inner">
       <div style="background: #FFF">
-        <script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script><fb:like-box href="http://www.facebook.com/pages/Ben-Varim/135114429880530" width="260" show_faces="true" stream="false" header="false"></fb:like-box>
+        <fb:like-box href="http://www.facebook.com/pages/Ben-Varim/135114429880530" width="260" show_faces="true" stream="false" header="false"></fb:like-box>
         </div>
     </div>
   </div>
