adds missing form closing tag.

--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -50,6 +50,8 @@
 
       <small>Gönder tuşuna bastıktan sonra ödeme bilgilerinizi girmek için %100 güvenli ödeme sistemi Paypal'a yönlendirileceksiniz. Ödeme yaptıktan sonra makbuzunuz e-posta adresinize gönderilecek ve benvarim.com'a geri geleceksiniz.</small>
 
+      </form>
+
     </div>
   </div>
 </div>
