trying to fix fb:like

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -53,9 +53,8 @@
   <%= javascript_include_tag "libs/modernizr-1.6.min" %>
 
   <script type="text/javascript">var switchTo5x=true;</script>
-  <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
   <script type="text/javascript">stLight.options({publisher:'892c5681-c08d-497e-b99e-8ae413aa62c7'});</script>
-
+  <script src="http://connect.facebook.net/tr_TR/all.js#appId=116309391796241&amp;xfbml=1"></script>
 </head>
 
 <body>
