--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
 
   <title><%=tags_title%></title>
   <meta property="og:site_name" content="Benvarim.com"/>
-  <meta property="og:url" content="<%=url_for :only_path => false%>"/>
+  <meta property="og:url" content="<%=url_for :only_path => false%>/"/>
   <meta property="og:type"  content="activity"/>
   <meta property="og:title" content="<%=fb_og_title%>" />
   <meta property="og:description" content="<%=fb_og_description%>"/>
