--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -29,6 +29,9 @@
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js">
   {lang: 'tr'}
 </script>
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share"></script>
+
 <script>!window.jQuery && document.write(unescape('%3Cscript src="javascripts/libs/jquery-1.4.2.js"%3E%3C/script%3E'))</script>
 
 <%= javascript_include_tag "plugins" %>
