--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -36,10 +36,12 @@
 
             <ul>
               <li style="width:60px"><g:plusone size="medium"></g:plusone></li>
-              <!-- <li><fb:like send="true" layout="button_count" width="165" show_faces="false"></fb:like></li> -->
-              <li><span  class='st_email_hcount' displayText='Email'></span></li>
-              <li><a  target="_blank" name="fb_share" type="button_count">Facebook'ta Paylaş</a></li>
-
+              <% if @show_fb_like_send %>
+                <li><fb:like send="true" layout="button_count" width="165" show_faces="false" href="<%=url_for :only_path => false%>#fb"></fb:like></li>
+              <% else %>
+                <li><span  class='st_email_hcount' displayText='Email'></span></li>
+                <li><a  target="_blank" name="fb_share" type="button_count">Facebook'ta Paylaş</a></li>
+              <% end %>
               <li><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-text="<%= @page.title %>" >Tweet</a></li>
             </ul>
 
