fixing sharethis problems

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -52,6 +52,8 @@
   <%= javascript_include_tag "libs/modernizr-1.6.min" %>
 
   <script src="http://connect.facebook.net/tr_TR/all.js#xfbml=1"></script>
+
+  <script type="text/javascript">var switchTo5x=true;</script>
 </head>
 
 <body>
