--- a/app/views/home/guvenli_odeme.html.erb
+++ b/app/views/home/guvenli_odeme.html.erb
@@ -2,12 +2,85 @@
   <div class="widget widget-light">
     <div class="w-inner">
       <div class="w-title">Güvenli Ödeme</div>
-       
 
-        <p>BenVarım, sosyal sorumluluk projeleri için bağış ve tanıtım platformudur.</p>
- 
+
+
+
+      <p><strong>Güvenli Ödeme Sistemi</strong><br />
+        Benvarim.com  kullanıcısı kurumlar, ister bankaların sanal pos cihazları ile, isterlerse PayPal ile kendi hesaplarında bağış toplayabilirler. Bu seçim kendilerine bırakılmıştır. Benvarim.com  üzerinden yapılan tüm bağışlar kurumun hesabına direk olarak giderken,  bağışçıya güvenli ödeme imkanı sağlar. Hem PayPal, hem de banka sanal POS cihazları ile, bağışçılar kredi ve banka kartlarıyla kolayca bağış yapabilirler. Her iki bağış toplama yöntemi de Türkiye Cumhuriyeti yasalarına uygundur.</p>
+
+      <p>Her iki ödeme  biçiminde de, ödeme yapılan kartın bilgileri yüksek teknolojili güvenlik  sistemiyle korunurken, kart bilgilerine ne bağış yapılan kurum, ne de Benvarim.com  erişebilir.</p>
+
+      <p>Benvarim.com hem kurum hesaplarının güvenliği, hem de yapılan bağışların doğru yere ulaşması  için, herhangi bir kurumu sisteme entegre ederken, kurumun yetkili mercilerinin  onayını talep etmekte ve her türlü dolandırıcılık faaliyetine karşı hem  kurumları, hem de bağışçıları korumaktadır.</p>
+      <p>Daha fazla bilgi  edinmek için lütfen bizimle iletişime geçiniz: <a href="mailto:iletisim@benvarim.com">iletisim@benvarim.com</a></p>
+      <p>&nbsp;</p>
+
+      <table border="1" cellspacing="10" cellpadding="10">
+        <tr>
+          <td width="20%" valign="top"><p><strong>&nbsp;</strong></p></td>
+          <td width="40%"  valign="top"><p><strong>Banka Sanal POS Cihazı </strong></p></td>
+          <td width="40%"  valign="top"><p><strong>PayPal</strong></p></td>
+        </tr>
+        <tr>
+          <td width="20%" valign="top"><p><strong>Açıklama</strong></p></td>
+          <td width="40%"  valign="top"><p>Bankaların sanal pos cihazları ile internet üzerinden    kredi kartı ve banka kartıyla yapılan alışveriş işlemlerinin güvenliği    sağlanmıştır. Visa ve MasterCard’ın geliştirdiğişi “güvenli internet    alışverişi 3D Secure” teknolojisi hem kart sahiplerini, hem de üye kurumları    sahtekarlıklara karşı güvence altına alınmıştır.</p></td>
+          <td width="40%"  valign="top"><p>PayPal, tüm dünyada yüz milyondan fazla kullanıcıya    sahip, en güvenli internet ödeme arayüzlerinden biridir. PayPal hesabıyla    bağış kabul eden kurumlara, bağışçının tercihine göre ister direk PayPal    hesabıyla, ister Visa, Mastercard ve American Express kredi ve banka    kartlarıyla ödeme yapmak mümkündür. </p></td>
+        </tr>
+        <tr>
+          <td width="20%" valign="top"><p><strong>&nbsp;</strong></p></td>
+          <td width="40%"  valign="top">
+            <img src="/images/cards/visa_48.png"  />
+            <img src="/images/cards/mastercard_48.png"/>
+          </td>
+          <td width="40%"  valign="top">
+            <img src="/images/cards/paypal_48.png" />
+            <img src="/images/cards/american_express_48.png" />
+            <img src="/images/cards/visa_48.png" />
+            <img src="/images/cards/mastercard_48.png"/>
+          </td>
+        </tr>
+        <tr>
+          <td width="20%" valign="top"><p><strong>&nbsp;</strong></p></td>
+          <td width="40%"  valign="top"><p>&nbsp;</p></td>
+          <td width="40%" valign="top"><p>&nbsp;</p></td>
+        </tr>
+        <tr>
+          <td width="20%" valign="top"><p><strong>Hesap açma</strong></p></td>
+          <td width="40%"  valign="top">
+            <p><a href="http://eticaret.akbank.com/sanal-pos-nedir.aspx?8">Akbank</a></p>
+            <p><a href="http://eticaret.garanti.com.tr/Garanti-Sanal-POS.aspx">Garanti Bankası</a></p>
+            <p><a href="http://www.vakifbank.com.tr/vpos-7-24.aspx">Vakıfbank</a></p>
+          </td>
+          <td width="40%"  valign="top">
+            <p><a href="https://www.paypal-turkiye.com/ticari/">Paypal Türkiye</a></p>
+          </td>
+        </tr>
+        <tr>
+          <td width="20%" valign="top"><p><strong>Kurulum Ücreti</strong></p></td>
+          <td width="40%"  valign="top"><p>150TL - 300TL <br />
+            <small>(bankaya göre değişen senelik ücret)</small></p></td>
+          <td width="40%"  valign="top"><p>0 TL</p></td>
+        </tr>
+        <tr>
+          <td width="20%" valign="top"><p><strong>Kurulum Süresi</strong></p></td>
+          <td width="40%"  valign="top"><p>5-15 gün</p></td>
+          <td width="40%"  valign="top"><p>5 dakika</p></td>
+        </tr>
+        <tr>
+          <td width="20%" valign="top"><p><strong>Kullanım Komisyon Ücreti</strong></p></td>
+          <td width="40%"  valign="top"><p>İşlem başına %1-%2 arası komisyon veya 45-50 gün arası    bloke süresi</p></td>
+          <td width="40%"  valign="top">Kar amacı gütmeyen kurumlar için işlem başına %1.4-%2 arası komisyon.</td>
+        </tr>
+        <tr>
+          <td width="20%" valign="top"><p><strong>&nbsp;</strong></p></td>
+          <td width="40%"  valign="top"><p>&nbsp;</p></td>
+          <td width="40%" valign="top"><p>&nbsp;</p></td>
+        </tr>
+      </table>
+
+
       </div>
-    </div> 
+    </div>
 </div><!-- end of #main-content -->
 
 <%= render 'layouts/sidebar'%>
