implements kariyer and guvenli odeme

--- a/app/views/home/guvenli_odeme.html.erb
+++ b/app/views/home/guvenli_odeme.html.erb
@@ -1,13 +1,9 @@
 <div id="main-content">
   <div class="widget widget-light">
     <div class="w-inner">
-      <div class="w-title">Güvenli Ödeme</div>
+      <div class="w-title">Güvenli Ödeme Sistemi</div>
 
-
-
-
-      <p><strong>Güvenli Ödeme Sistemi</strong><br />
-        Benvarim.com  kullanıcısı kurumlar, ister bankaların sanal pos cihazları ile, isterlerse PayPal ile kendi hesaplarında bağış toplayabilirler. Bu seçim kendilerine bırakılmıştır. Benvarim.com  üzerinden yapılan tüm bağışlar kurumun hesabına direk olarak giderken,  bağışçıya güvenli ödeme imkanı sağlar. Hem PayPal, hem de banka sanal POS cihazları ile, bağışçılar kredi ve banka kartlarıyla kolayca bağış yapabilirler. Her iki bağış toplama yöntemi de Türkiye Cumhuriyeti yasalarına uygundur.</p>
+      <p>Benvarim.com  kullanıcısı kurumlar, ister bankaların sanal pos cihazları ile, isterlerse PayPal ile kendi hesaplarında bağış toplayabilirler. Bu seçim kendilerine bırakılmıştır. Benvarim.com  üzerinden yapılan tüm bağışlar kurumun hesabına direk olarak giderken,  bağışçıya güvenli ödeme imkanı sağlar. Hem PayPal, hem de banka sanal POS cihazları ile, bağışçılar kredi ve banka kartlarıyla kolayca bağış yapabilirler. Her iki bağış toplama yöntemi de Türkiye Cumhuriyeti yasalarına uygundur.</p>
 
       <p>Her iki ödeme  biçiminde de, ödeme yapılan kartın bilgileri yüksek teknolojili güvenlik  sistemiyle korunurken, kart bilgilerine ne bağış yapılan kurum, ne de Benvarim.com  erişebilir.</p>
 
@@ -77,7 +73,6 @@
           <td width="40%" valign="top"><p>&nbsp;</p></td>
         </tr>
       </table>
-
 
       </div>
     </div>
