--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,6 +11,7 @@
   <%=link_to "Gizlilik Politikası", :gizlilik_politikasi %> |
   <%=link_to "Kullanım Şartları", :kullanim_sartlari %> |
   <%=link_to "Güvenli Ödeme", :guvenli_odeme %> |
+  <%=link_to "Kariyer", :kariyer %> |
   <%=link_to "Hakkımızda", :hakkimizda %> |
   <%=link_to "İletişim", :new_contact_form %>
 </div>
