--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -95,7 +95,9 @@
                 <%@payments.each do |payment|%>
                   <div class="row clearfix">
                     <div class="bagis-miktari"><%=payment.amount_str%><span>TL</span></div>
-                    <blockquote><span>“</span> <%=payment.note%></blockquote>
+                    <% if payment.note? %>
+                      <blockquote><span class="quotation">“</span> <%=payment.note%></blockquote>
+                    <% end %>
                     <div class="bagisci"><%=payment.name%> - <%=payment.created_at.in_time_zone("Istanbul").to_formatted_s(:simple) %>  </div>
                   </div><!-- end of .row -->
                 <% end %>
